[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Shiqi Zhao <zhao.shiqi.art@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
ndarray = { version = "0.14.0", features = ["rayon"] }
permutohedron = "0.2.4"
rayon = "1.5"
regex = "1"
